--- a/rental/templates/register.html
+++ b/rental/templates/register.html
@@ -55,6 +55,8 @@
             
             <button type="submit">Register</button>
         </form>
+        <br>
+        <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
     </div>
 </body>
 </html>
