--- a/rental/templates/login.html
+++ b/rental/templates/login.html
@@ -8,18 +8,26 @@
     <link rel="stylesheet" href="{% static 'css/style2.css' %}">
 </head>
 <body>
+  
+
     <div class="login-container">
         <h2>Login</h2>
         {% if error %}
-            <p style="color: red;">{{ error }}</p>
+            <p class="error-message">{{ error }}</p>
         {% endif %}
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
-            <input type="text" name="email" placeholder="Email/Username" required>
-            <input type="password" name="password" placeholder="Password" required>
+            <div class="form-group">
+                <label for="email">Email/Username</label>
+                <input type="text" id="email" name="email" placeholder="Enter your email or username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            </div>
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="/register/">Register here</a></p>
+        <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
     </div>
 </body>
 </html>
